--- a/zemberek-server/.classpath
+++ b/zemberek-server/.classpath
@@ -3,7 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
-	<classpathentry kind="lib" path="lib/zemberek2-tr.jar"/>
+	<classpathentry kind="lib" path="lib/zemberek-cekirdek-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/zemberek-tr-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/dbus.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/firari/Desktop/zemberek-server/lib"/>
