- conf.ini deki yanlış parametre adı değişsin - Tek bir slf4j kütüphanesi kullan

--- a/trunk/zemberek-server/config/conf.ini
+++ b/trunk/zemberek-server/config/conf.ini
@@ -1,5 +1,5 @@
 #Local zemberek server port number. default is 10444
-#SERVER_PORT = 10444
+#PORT_NUMBER = 1234
 
 #Should DBus use system-wide connections? . default is yes, requires root permissions
 #USE_DBUS_SYSTEM_CONNECTION = yes
