--- a/zemberek2/nbproject/project.properties
+++ b/zemberek2/nbproject/project.properties
@@ -49,7 +49,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=net.zemberek.demo.DemoMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
