--- a/zemberek-server/build.xml
+++ b/zemberek-server/build.xml
@@ -125,7 +125,8 @@
         </copy>
     	
     	<copy file="run.sh" todir="${dist.dir}" />
-    	<copy file="runtest.sh" todir="${dist.dir}" />    	
+    	<copy file="runtest_dbus.sh" todir="${dist.dir}" /> 
+    	<copy file="runtest_socket.sh" todir="${dist.dir}" />
     	<copy file="zemberek-server.xml" todir="${dist.dir}" />
         <tstamp>
             <format property="release" pattern="-dMMMyy" locale="tr"/>
@@ -139,7 +140,7 @@
                 <attribute name="Main-Class"
                     value="net.zemberekserver.server.ZemberekServer"/>
                 <attribute name="Class-Path"
-                    value=". lib/mina-core-1.1pre.jar lib/slf4j-api-1.1.0.jar lib/slf4j-nop-1.1.0.jar lib/zemberek-cekirdek-2.0.jar lib/zemberek-tr-2.0.jar lib/dbus.jar lib/unix.jar lib/hexdump.jar ${isim}_dbus-${surum}.jar"/>
+                    value=". lib/mina-core-1.1pre.jar lib/slf4j-nop.jar lib/zemberek-cekirdek-2.0.jar lib/zemberek-tr-2.0.jar lib/dbus.jar lib/unix.jar  ${isim}_dbus-${surum}.jar"/>
             </manifest>
         </jar>
         <jar jarfile="${dist.dir}/${isim}_dbus-${surum}.jar"
