--- a/trunk/zemberek-server/.classpath
+++ b/trunk/zemberek-server/.classpath
@@ -5,18 +5,13 @@
 	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
 	<classpathentry kind="lib" path="lib/zemberek-cekirdek-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/zemberek-tr-2.0.jar"/>
-	<classpathentry kind="lib" path="lib/dbus.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/firari/Desktop/zemberek-server/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/unix.jar">
+	<classpathentry kind="lib" path="lib/dbus.jar" sourcepath="/home/mdakin/workspace/dbus-java-2.1/src">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/firari/Desktop/zemberek-server/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/mina-core-1.1pre.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop.jar"/>
-	<classpathentry kind="lib" path="lib/hexdump.jar"/>
+	<classpathentry kind="lib" path="lib/unix.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
