Library path ayarı

--- a/trunk/zemberek-server/.classpath
+++ b/trunk/zemberek-server/.classpath
@@ -12,6 +12,10 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/mina-core-1.1pre.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop.jar"/>
-	<classpathentry kind="lib" path="lib/unix.jar"/>
+	<classpathentry kind="lib" path="lib/unix.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="zemberek-server/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
