--- a/trunk/zemberek2/.classpath
+++ b/trunk/zemberek2/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/tr"/>
+	<classpathentry kind="src" path="src/tt"/>
 	<classpathentry kind="src" path="src/demo"/>
 	<classpathentry kind="src" path="src/az"/>
 	<classpathentry kind="src" path="src/tm"/>
