--- a/zemberek-server/.classpath
+++ b/zemberek-server/.classpath
@@ -10,12 +10,12 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/firari/Desktop/zemberek-server/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/mina-core-1.1pre.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop.jar"/>
 	<classpathentry kind="lib" path="lib/unix.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="zemberek-server/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/mina-core-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
