--- a/trunk/zemberek-server/build.xml
+++ b/trunk/zemberek-server/build.xml
@@ -147,6 +147,12 @@
             update="true"
             excludes="**/*.zip"
             />
+    	<zip destfile="${dist.dir}/${isim}-src-${surum}.zip" basedir="." update="true">
+    		<exclude name="**/.*"/>
+    		<exclude name="**/dist/**"/>
+    		<exclude name="**/build/**"/>
+    		<exclude name="**/bin/**"/>
+    	</zip>
 
     </target>
 
