--- a/trunk/zemberek-server/.classpath
+++ b/trunk/zemberek-server/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/zemberek-cekirdek-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/zemberek-tr-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/dbus.jar" sourcepath="/home/mdakin/workspace/dbus-java-2.1/src">
