- Çalışmayan testleri yoksay. - Temizleme işlemine dağıtım dizinini ekle. - Sürümü 2.1_rc1 yap.

--- a/trunk/zemberek2/build.properties
+++ b/trunk/zemberek2/build.properties
@@ -1,4 +1,1 @@
-surum = 2.1
-ant.home=E://Java//ant-1.6.5
-# zemberek open office projesini gosteren dizin. sadece ooo ile ilgili isler icin gerekli.....
-zemberek_ooo_dir=home/Projects/zemberek/zemberek_ooo
+surum = 2.1_rc1
