--- a/trunk/zemberek2/build.xml
+++ b/trunk/zemberek2/build.xml
@@ -118,6 +118,7 @@
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 	<target name="temizle">
 		<delete dir="${build.dir}"/>
+		<delete dir="${dist.dir}"/>
 		<delete>
 			<fileset dir="${kaynaklar.dir}/">
 				<include name="**/*.bin"/>
