--- a/zemberek-web/nbproject/private/private.properties
+++ b/zemberek-web/nbproject/private/private.properties
@@ -1,23 +1,23 @@
-deploy.ant.properties.file=/home/firari/.netbeans/5.5/tomcat55.properties
-file.reference.zemberek2-cekirdek.jar=/usr/share/zemberek2-svn/lib/zemberek2-cekirdek.jar
-file.reference.zemberek2-tr.jar=/usr/share/zemberek2-svn/lib/zemberek2-tr.jar
-j2ee.platform.classpath=/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/naming-factory-dbcp.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/jasper-compiler.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/servlet-api.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/commons-el.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/naming-factory.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/jasper-runtime.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/jsp-api.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/naming-resources.jar:/opt/netbeans-5.5/enterprise3/apache-tomcat-5.5.17/common/lib/ant.jar
+deploy.ant.properties.file=C:\\Documents and Settings\\skaba\\.netbeans\\5.5\\tomcat55.properties
+file.reference.zemberek2-cekirdek.jar=C:\\zemberek-2.1_rc1\\jar\\zemberek-cekirdek-2.1_rc1.jar
+file.reference.zemberek2-tr.jar=C:\\zemberek-2.1_rc1\\jar\\zemberek-tr-2.1_rc1.jar
+j2ee.platform.classpath=C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\ant.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\commons-el.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\jasper-compiler.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\jasper-runtime.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\jsp-api.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\naming-factory-dbcp.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\naming-factory.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\naming-resources.jar:C:\\Program Files\\netbeans-5.5\\enterprise3\\apache-tomcat-5.5.17\\common\\lib\\servlet-api.jar
 j2ee.server.instance=tomcat55:home=$bundled_home:base=$bundled_base
 javac.debug=true
 javadoc.preview=true
-libs.jaxws20.classpath.libfile.1=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/activation.jar
-libs.jaxws20.classpath.libfile.10=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jsr173_api.jar
-libs.jaxws20.classpath.libfile.11=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jsr181-api.jar
-libs.jaxws20.classpath.libfile.12=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jsr250-api.jar
-libs.jaxws20.classpath.libfile.13=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/saaj-api.jar
-libs.jaxws20.classpath.libfile.14=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/saaj-impl.jar
-libs.jaxws20.classpath.libfile.15=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/sjsxp.jar
-libs.jaxws20.classpath.libfile.2=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/FastInfoset.jar
-libs.jaxws20.classpath.libfile.3=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/http.jar
-libs.jaxws20.classpath.libfile.4=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jaxb-api.jar
-libs.jaxws20.classpath.libfile.5=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jaxb-impl.jar
-libs.jaxws20.classpath.libfile.6=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jaxb-xjc.jar
-libs.jaxws20.classpath.libfile.7=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jaxws-api.jar
-libs.jaxws20.classpath.libfile.8=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jaxws-rt.jar
-libs.jaxws20.classpath.libfile.9=/opt/netbeans-5.5/ide7/modules/ext/jaxws20/jaxws-tools.jar
-user.properties.file=/home/firari/.netbeans/5.5/build.properties
+libs.jaxws20.classpath.libfile.1=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\FastInfoset.jar
+libs.jaxws20.classpath.libfile.10=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\sjsxp.jar
+libs.jaxws20.classpath.libfile.11=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\activation.jar
+libs.jaxws20.classpath.libfile.12=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jaxb-api.jar
+libs.jaxws20.classpath.libfile.13=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jaxb-impl.jar
+libs.jaxws20.classpath.libfile.14=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jaxb-xjc.jar
+libs.jaxws20.classpath.libfile.15=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jsr173_api.jar
+libs.jaxws20.classpath.libfile.2=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\http.jar
+libs.jaxws20.classpath.libfile.3=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jaxws-api.jar
+libs.jaxws20.classpath.libfile.4=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jaxws-rt.jar
+libs.jaxws20.classpath.libfile.5=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jaxws-tools.jar
+libs.jaxws20.classpath.libfile.6=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jsr181-api.jar
+libs.jaxws20.classpath.libfile.7=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\jsr250-api.jar
+libs.jaxws20.classpath.libfile.8=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\saaj-api.jar
+libs.jaxws20.classpath.libfile.9=C:\\Program Files\\netbeans-5.5\\ide7\\modules\\ext\\jaxws20\\saaj-impl.jar
+user.properties.file=C:\\Documents and Settings\\skaba\\.netbeans\\5.5\\build.properties
