--- a/zemberek-web/nbproject/project.properties
+++ b/zemberek-web/nbproject/project.properties
@@ -19,8 +19,6 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
-file.reference.zemberek2-cekirdek.jar=../../../usr/share/zemberek2-svn/lib/zemberek2-cekirdek.jar
-file.reference.zemberek2-tr.jar=../../../usr/share/zemberek2-svn/lib/zemberek2-tr.jar
 j2ee.platform=1.4
 j2ee.server.type=Tomcat55
 jar.compress=false
@@ -32,8 +30,8 @@ javac.classpath=\
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
-javac.source=${default.javac.source}
-javac.target=${default.javac.target}
+javac.source=1.5
+javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
