jar-tt jar-dil i doğru parametre ile çağırsın

--- a/trunk/zemberek2/build.xml
+++ b/trunk/zemberek2/build.xml
@@ -272,7 +272,7 @@
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 	<target name="jar-tt">
 		<antcall target="jar-dil">
-			<param name="dil" value="az"/>
+			<param name="dil" value="tt"/>
 		</antcall>
 	</target>
 
